--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: zip create
         # zip 파일을 만듭니다(파일명은 자유, 대신 아래 workflow에 적을 파일명과 동일하게 맞춰주세요).
-        run: zip -qq -r ./JoMyeong.zip .
+        run: zip -qq -r ./front.zip .
         shell: bash
 
       - name: Configure AWS credentials
@@ -38,11 +38,11 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws s3 cp --region ap-southeast-2 ./JoMyeong.zip s3://jomyeongbucket/JoMyeong.zip
+          aws s3 cp --region ap-southeast-2 ./front.zip s3://jomyeongbucket/front.zip
 
       - name: Deploy # Deploy to EC2
         run: aws deploy create-deployment
           --application-name JoMyeongCD
           --deployment-config-name CodeDeployDefault.AllAtOnce
           --deployment-group-name JoMyeong-cicd-group
-          --s3-location bucket=jomyeongbucket,key=JoMyeong.zip,bundleType=zip
+          --s3-location bucket=jomyeongbucket,key=front.zip,bundleType=zip
